--- a/src/main/resources/templates/cursos/lista.html
+++ b/src/main/resources/templates/cursos/lista.html
@@ -376,7 +376,7 @@
 
 <body>
     <div class="sidebar">
-        <div class="brand">Sistema de Alumnos</div>
+        <div class="brand">Gestión de Alumnos</div>
         <nav>
             <a class="nav-link" th:href="@{/dashboard}">Dashboard</a>
             <a class="nav-link" th:href="@{/alumnos}">Alumnos</a>
